Style Home Page

--- a/src/style/basics/_text.scss
+++ b/src/style/basics/_text.scss
@@ -1,8 +1,9 @@
 // Text Styles
 .x-large {
+  font-family: Lato-Bold;
   font-size: 4rem;
   line-height: 1.2;
-  margin-bottom: 1rem;
+  margin-bottom: 0rem;
 }
 
 .large {
@@ -13,7 +14,7 @@
 
 .lead {
   font-size: 1.5rem;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 .text-primary {
