--- a/src/style/setup/_typography.scss
+++ b/src/style/setup/_typography.scss
@@ -2,3 +2,8 @@
   font-family: Lato;
   src: url(../assets/font/Lato/Lato-Regular.ttf);
 }
+
+@font-face {
+  font-family: Lato-Bold;
+  src: url(../assets/font/Lato/Lato-Black.ttf);
+}
