--- a/src/style/basics/_text.scss
+++ b/src/style/basics/_text.scss
@@ -37,10 +37,18 @@
   font-size: 12px !important;
 }
 
+.text-mid {
+  font-size: 16px !important;
+}
+
 .text-center {
   text-align: center;
 }
 
 .text-bold {
-  font-weight: bolder !important;
+  font-family: Lato-Bold !important;
+}
+
+.text-grey-dark {
+  color: rgb(73, 73, 73);
 }
