--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -21,13 +21,14 @@
 @import 'components/search.scss';
 @import 'components/tabs.scss';
 @import 'components/pictures.scss';
-@import 'components/course.scss';
 @import 'components/error.scss';
 @import 'components/home.scss';
+@import 'components/gallery.scss';
 
 // Pages
 @import 'pages/landing.scss';
 @import 'pages/profile.scss';
 @import 'pages/profiles.scss';
 @import 'pages/review.scss';
+@import 'pages/course.scss';
 @import 'pages/user.scss';
