--- a/src/style/pages/_course.scss
+++ b/src/style/pages/_course.scss
@@ -1,7 +1,7 @@
 .course-details-grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-gap: 0.5rem;
+  grid-gap: 0.2rem;
 }
 
 .course-details-header {
@@ -49,6 +49,7 @@
 .contact-info-position {
   position: relative;
   top: 40px;
+  margin-right: 15px;
 }
 
 .course-tag-info {
@@ -65,6 +66,16 @@
 .map {
   width: 50%;
   border-radius: 10px;
+}
+
+.map-title {
+  position: relative;
+  top: 2rem;
+  left: 1rem;
+  color: #281414;
+  z-index: 10;
+  margin: 0;
+  padding: 0;
 }
 
 .school-grid {
