--- a/src/style/pages/_landing.scss
+++ b/src/style/pages/_landing.scss
@@ -1,8 +1,10 @@
 // Landing
 .landing {
   position: relative;
-  background: url('../assets/img/showcase.jpg') no-repeat center center/cover;
-  height: 50vh;
+  background: linear-gradient(180deg, #008aff, #ff137d),
+    url('../assets/img/showcase.jpg') no-repeat center center/cover;
+  background-blend-mode: screen;
+  height: 45vh;
 
   &-inner {
     color: #fff;
