Finish working on Enroll Form, Implement Footer component

--- a/src/style/basics/_form.scss
+++ b/src/style/basics/_form.scss
@@ -54,3 +54,10 @@ select {
   overflow: hidden;
   padding: 0 2rem;
 }
+
+.form-enroll {
+  max-width: 1000px;
+  margin: 1rem auto;
+  overflow: hidden;
+  padding: 0.5rem 2rem;
+}
