--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -24,6 +24,7 @@
 @import 'components/error.scss';
 @import 'components/home.scss';
 @import 'components/gallery.scss';
+@import 'components/footer.scss';
 
 // Pages
 @import 'pages/landing.scss';
