--- a/src/style/pages/_landing.scss
+++ b/src/style/pages/_landing.scss
@@ -5,7 +5,7 @@
     url('../assets/img/showcase.jpg') no-repeat center center/cover;
   background-blend-mode: screen;
   height: 45vh;
-
+  z-index: 0;
   &-inner {
     color: #fff;
     height: 100%;
@@ -16,6 +16,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
+
     a {
       width: 30%;
     }
