--- a/src/style/pages/_profile.scss
+++ b/src/style/pages/_profile.scss
@@ -46,18 +46,18 @@
 }
 
 .icons a {
-  color: $primary-color;
-  margin: 0 0.3rem;
-
+  color: $grey-color;
+  padding: 1rem;
+  margin: 0;
   &:hover {
-    color: $dark-color;
+    color: $primary-color;
   }
 }
 
 .line {
   height: 1px;
   background: #ccc;
-  margin: 1rem 0;
+  margin: 0.5rem 0;
 }
 
 .topics {
