--- a/src/style/pages/_profiles.scss
+++ b/src/style/pages/_profiles.scss
@@ -1,14 +1,9 @@
-// .profiles {
-//   display: grid;
-//   grid-template-columns: 0.8fr 2fr;
-//   grid-gap: 1rem;
-// }
-
 .course-card {
   position: relative;
   top: -80px;
   left: 10px;
   color: #fff;
+  height: 20px;
 }
 
 .round-img {
