--- a/src/style/components/_search.scss
+++ b/src/style/components/_search.scss
@@ -1,46 +1,22 @@
 // Search box
 .search {
   display: grid;
-  grid-template-columns: 2fr 0.1fr;
-  z-index: 1;
-  input[type='text'] {
-    display: block;
-    width: 100%;
-    padding: 0.4rem;
-    font-size: 1.2rem;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    box-shadow: 0px 6px 10px -8px rgba(0, 0, 0, 0.25);
-  }
-  button {
-    width: 100%;
-  }
-}
-
-.search-bootcamps {
-  display: grid;
   grid-template-columns: 1fr;
-  grid-gap: 0.5rem;
+  z-index: 1;
+  width: 20%;
   input[type='text'] {
-    display: block;
     width: 100%;
-    padding: 0.4rem;
+    padding: 0.9rem;
     font-size: 1.2rem;
     border: 1px solid #ccc;
     border-radius: 8px;
     box-shadow: 0px 6px 10px -8px rgba(0, 0, 0, 0.25);
   }
-  button {
-    width: 100%;
-  }
-}
-
-.search-footer {
-  display: grid;
-  grid-template-columns: 4fr;
-  a {
-    display: block;
-    width: 100%;
+  span {
+    position: relative;
+    top: -60px;
+    right: -150px;
+    border-radius: 5px;
   }
 }
 
