--- a/src/style/components/_tabs.scss
+++ b/src/style/components/_tabs.scss
@@ -1,6 +1,6 @@
 .filter {
   display: inline-block;
-  background: #ffffff;
+  // background: #ffffff;
   border: #ccc 1px double;
   padding: 0.4rem 1.3rem;
   font-size: 1rem;
@@ -10,4 +10,17 @@
   outline: none;
   border-radius: 20px;
   box-shadow: 0px 9px 6px -8px rgba(0, 0, 0, 0.1);
+
+  &:hover {
+    border: $primary-color 1px double;
+  }
+
+  &:active {
+    background-color: $primary-color !important;
+  }
+}
+
+.filter .filter-active {
+  background-color: $primary-color;
+  color: #fff;
 }
