--- a/src/style/basics/_layout.scss
+++ b/src/style/basics/_layout.scss
@@ -63,6 +63,18 @@
   margin: auto;
 }
 
+.flex-center p {
+  margin-top: 0;
+  color: #999;
+  padding: 0 1.5rem;
+  font-family: ChunkFive;
+}
+
+.flex-center p img {
+  width: 70px;
+  color: #333;
+}
+
 .display-flex {
   display: flex;
 }
