--- a/src/style/setup/_typography.scss
+++ b/src/style/setup/_typography.scss
@@ -7,3 +7,8 @@
   font-family: Lato-Bold;
   src: url(../assets/font/Lato/Lato-Black.ttf);
 }
+
+@font-face {
+  font-family: ChunkFive;
+  src: url(../assets/font/ChunkFive/ChunkFive-Regular.otf);
+}
