--- a/src/style/basics/_form.scss
+++ b/src/style/basics/_form.scss
@@ -61,3 +61,10 @@ select {
   overflow: hidden;
   padding: 0.5rem 2rem;
 }
+
+.form-userprofile {
+  max-width: 1100px;
+  margin: 1rem auto;
+  overflow: hidden;
+  padding: 0 2rem;
+}
