--- a/src/style/components/_navbar.scss
+++ b/src/style/components/_navbar.scss
@@ -66,3 +66,10 @@
   height: 55px;
   box-shadow: 0px 4px 7px -7px rgba(0, 0, 0, 0.75);
 }
+
+.user-avatar {
+  position: relative;
+  top: 2px;
+  border-radius: 5px;
+  width: 18px;
+}
