--- a/src/style/pages/_course.scss
+++ b/src/style/pages/_course.scss
@@ -97,3 +97,43 @@
   position: relative;
   left: 280px;
 }
+
+.enrolls-wrapper {
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  grid-gap: 0;
+}
+
+.enrolls {
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  border: #ccc 1px dotted;
+  padding: 0.6rem;
+  border-radius: 15px;
+}
+
+.enrolls img {
+  width: 55px;
+}
+
+.enrolls p,
+.enrolls span {
+  font-size: 10px;
+  font-weight: bolder;
+}
+
+.enrolls i {
+  margin-right: 5px;
+}
+
+.social-enrolls {
+  font-size: 0.8rem;
+  padding: 0.2rem 0.2rem;
+  text-align: center;
+  margin: 0.1rem;
+  background: var(--light-color);
+  color: #333;
+  border-radius: 5px;
+}
