--- a/src/style/basics/_form.scss
+++ b/src/style/basics/_form.scss
@@ -64,7 +64,8 @@ select {
 
 .form-userprofile {
   max-width: 1100px;
-  margin: 1rem auto;
+  // margin: 1rem auto;
+  margin: auto;
   overflow: hidden;
   padding: 0 2rem;
 }
