--- a/src/style/pages/_profile.scss
+++ b/src/style/pages/_profile.scss
@@ -45,6 +45,17 @@
   border-bottom: solid 5px $primary-color;
 }
 
+.table {
+  width: 29rem;
+  margin: auto;
+  margin-top: 0.5rem;
+}
+
+.dash-buttons {
+  width: 53rem;
+  margin: auto;
+}
+
 .icons a {
   color: $grey-color;
   padding: 1rem;
