--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,36 +1,42 @@
 // Setup
-@import 'setup/variables.scss';
-@import 'setup/functions.scss';
-@import 'setup/mixins.scss';
-@import 'setup/typography.scss';
+@import 'setup/variables';
+@import 'setup/functions';
+@import 'setup/mixins';
+@import 'setup/typography';
 
 // Basic
-@import 'basics/base.scss';
-@import 'basics/form.scss';
-@import 'basics/text.scss';
-@import 'basics/img.scss';
-@import 'basics/layout.scss';
-@import 'basics/badges.scss';
-@import 'basics/helpers.scss';
-@import 'basics/buttons.scss';
-@import 'basics/alerts.scss';
-@import 'basics/stars.scss';
+@import 'basics/base';
+@import 'basics/form';
+@import 'basics/text';
+@import 'basics/img';
+@import 'basics/layout';
+@import 'basics/badges';
+@import 'basics/helpers';
+@import 'basics/buttons';
+@import 'basics/alerts';
+@import 'basics/stars';
 
 // Components
-@import 'components/navbar.scss';
-@import 'components/search.scss';
-@import 'components/tabs.scss';
-@import 'components/pictures.scss';
-@import 'components/error.scss';
-@import 'components/home.scss';
-@import 'components/gallery.scss';
-@import 'components/footer.scss';
+@import 'components/navbar';
+@import 'components/search';
+@import 'components/tabs';
+@import 'components/pictures';
+@import 'components/error';
+@import 'components/home';
+@import 'components/gallery';
+@import 'components/footer';
 
 // Pages
-@import 'pages/landing.scss';
-@import 'pages/profile.scss';
-@import 'pages/profiles.scss';
-@import 'pages/review.scss';
-@import 'pages/course.scss';
-@import 'pages/user.scss';
-@import 'pages/dashboard.scss';
+@import 'pages/landing';
+@import 'pages/profile';
+@import 'pages/profiles';
+@import 'pages/review';
+@import 'pages/course';
+@import 'pages/user';
+@import 'pages/dashboard';
+
+// Mobile
+@import 'mobile/homepage';
+@import 'mobile/courseapppage';
+@import 'mobile/coursedetailspage';
+@import 'mobile/backoffice';
