--- a/src/style/basics/_layout.scss
+++ b/src/style/basics/_layout.scss
@@ -7,6 +7,14 @@
   margin-top: 0rem;
 }
 
+.container-home {
+  max-width: $max-width;
+  margin: auto;
+  // overflow: hidden;
+  padding: 0 2rem;
+  margin-top: 0rem;
+}
+
 /* Grid */
 .grid-2 {
   display: grid;
@@ -55,6 +63,26 @@
   justify-content: space-between;
 }
 
+.flex-center-board-img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin: auto;
+}
+
+.flex-center-board-img p {
+  margin-top: 0;
+  color: #999;
+  padding: 0 1.5rem;
+  font-family: ChunkFive;
+}
+
+.flex-center-board-img p img {
+  width: 70px;
+  color: #333;
+}
+
 .flex-center {
   display: flex;
   align-items: center;
@@ -74,6 +102,12 @@
   width: 70px;
   color: #333;
 }
+
+.flex-footer {
+  display: flex;
+  justify-content: space-between;
+}
+
 
 .display-flex {
   display: flex;
