--- a/src/style/components/_navbar.scss
+++ b/src/style/components/_navbar.scss
@@ -61,10 +61,17 @@
   }
 }
 
+// .board {
+//   width: 100%;
+//   height: 55px;
+//   box-shadow: 0px 4px 7px -7px rgba(0, 0, 0, 0.75);
+// }
+
 .board {
-  width: 100%;
+  width: 96%;
   height: 55px;
   box-shadow: 0px 4px 7px -7px rgba(0, 0, 0, 0.75);
+  margin: auto;
 }
 
 .user-avatar {
