--- a/src/style/components/_search.scss
+++ b/src/style/components/_search.scss
@@ -3,7 +3,7 @@
   display: grid;
   grid-template-columns: 1fr;
   z-index: 1;
-  width: 20%;
+  // width: 20%;
   input[type='text'] {
     width: 100%;
     padding: 0.9rem;
@@ -15,7 +15,8 @@
   span {
     position: relative;
     top: -60px;
-    right: -150px;
+    // right: -150px;
+    right: -115px;
     border-radius: 5px;
   }
 }
