--- a/src/style/components/_home.scss
+++ b/src/style/components/_home.scss
@@ -117,3 +117,26 @@
   grid-template-columns: 1.5fr 1fr;
   grid-gap: 1rem;
 }
+
+.home-filter {
+  // display: grid;
+  // grid-template-columns: 1fr;
+  display: flex;
+  left: -100px;
+  position: relative;
+  z-index: 1;
+  // width: 20%;
+  input[type='text'] {
+    width: 200%;
+    padding: 1rem;
+    font-size: 1.2rem;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0px 10px 10px -8px rgba(0, 0, 0, 0.25);
+  }
+
+  span {
+    position: relative;
+    right: -180px;
+  }
+}
