--- a/src/style/components/_navbar.scss
+++ b/src/style/components/_navbar.scss
@@ -69,7 +69,7 @@
 
 .board {
   width: 96%;
-  height: 55px;
+  // height: 15px;
   box-shadow: 0px 4px 7px -7px rgba(0, 0, 0, 0.75);
   margin: auto;
 }
