--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -34,6 +34,7 @@
 @import 'pages/course';
 @import 'pages/user';
 @import 'pages/dashboard';
+@import 'pages/userprofile';
 
 // Mobile
 @import 'mobile/homepage';
