--- a/src/style/pages/_profile.scss
+++ b/src/style/pages/_profile.scss
@@ -53,7 +53,7 @@
 
 .dash-buttons {
   width: 53rem;
-  margin: auto;
+  margin: 3rem auto;
 }
 
 .icons a {
@@ -100,6 +100,6 @@
   top: 20px;
   padding: 0.5rem;
   border-radius: 50%;
-  width: 50px;
+  width: 55px;
   height: 50px;
 }
