--- a/src/style/pages/_course.scss
+++ b/src/style/pages/_course.scss
@@ -79,7 +79,7 @@
 
 .school-grid {
   display: grid;
-  grid-template-columns: 0.2fr 1fr;
+  grid-template-columns: 0.5fr 0.2fr 1fr;
   grid-gap: 0.5rem;
   padding: 1rem;
   margin-left: 15px;
@@ -102,8 +102,8 @@
 .enrolls-wrapper {
   display: grid;
   grid-template-columns: repeat(10, 1fr);
-  grid-gap: 1rem;
-  margin-top: 0.5rem;
+  margin-right: 120px;
+  margin-top: 20px;
 }
 
 .enrolls {
@@ -163,11 +163,9 @@
 }
 
 .registered-title {
-  margin-left: 65px;
-  margin-bottom: 5rem;
+  margin-left: 20px;
 }
 
 .info-details {
-  margin-top: 20px;
-  margin-left: 5px;
+  margin-left: 20px;
 }
