--- a/src/style/pages/_course.scss
+++ b/src/style/pages/_course.scss
@@ -121,7 +121,7 @@
 }
 
 .enrolls img {
-  min-width: 50px;
+  width: 65px;
   max-height: 60px;
 }
 
@@ -168,4 +168,12 @@
 
 .info-details {
   margin-left: 20px;
+}
+
+.isconfirmed {
+  font-size: 0.8rem;
+  padding: 0.2rem 0.7rem;
+  text-align: center;
+  margin: 0.3rem;
+  background: $light-color;
 }
