--- a/src/style/pages/_course.scss
+++ b/src/style/pages/_course.scss
@@ -23,7 +23,7 @@
   // border: #ccc 1px dotted;
   border-radius: 5px;
   padding: 1rem;
-  height: 42rem;
+  height: 41rem;
 }
 
 .course-details-right-title {
@@ -121,7 +121,7 @@
 }
 
 .enrolls img {
-  width: 65px;
+  min-width: 50px;
   max-height: 60px;
 }
 
@@ -162,18 +162,14 @@
   margin-bottom: 2rem;
 }
 
+.isconfirmed {
+  font-size: 12px !important;
+}
+
 .registered-title {
   margin-left: 20px;
 }
 
 .info-details {
   margin-left: 20px;
-}
-
-.isconfirmed {
-  font-size: 0.8rem;
-  padding: 0.2rem 0.7rem;
-  text-align: center;
-  margin: 0.3rem;
-  background: $light-color;
 }
